# MATH557-Telecom-Traffic-Forecasting-Project

./: Day Of Week Analysis.ipynb  Price Analysis.ipynb  README.md  Seasonal Analysis.ipynb  Traffic Data Applied Linear Algebra.csv  linear_regression.ipynb  pyproject.toml  var_covar_ex.ipynb
PCA/: PCA.ipynb  Transformed_PCA_Data.csv
analysis/: Hourly Analysis.ipynb
autoregression/: autoregression.ipynb
linear_regression/: linear_regression_.ipynb  linear_regression_omar.ipynb  linear_regression_ordered.ipynb
var_covar/: var_covar_HM.ipynb  var_covar_ex.ipynb
