[tool.poetry]
name = "hpcc"
version = "0.1.0"
description = ""
authors = ["yousef_vm <yoosif@windowslive.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.3"
notebook = "^7.4.5"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
matplotlib = "^3.10.6"
pandoc = "^2.4"
ipykernel = "^7.1.0"
marimo = "^0.18.2"
statsmodels = "^0.14.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
